maze.lessons.maze.island.IslandMaze.scala.error
Escaper:10: error: type mismatch;
 found   : Unit
 required: plm.universe.Direction
      setDirection(gauche:Direction)
                   ^